# SensitiveScan

./: .gitignore  API_DOCUMENTATION.md  DEVELOPMENT.md  PROJECT_README.md  README.md  WINDOWS_SETUP_GUIDE.md  db.rs  package.json  pnpm-lock.yaml  tauri.conf.json  vite.config.js
.github/workflows/: build.yml
src/: App.vue  HistoryPage.vue  ScanPage.vue  api.ts  index.html  index.ts  router.ts  scanStore.ts
src-tauri/: Cargo.toml  error.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  db_enhanced.rs  error.rs  lib.rs  logger.rs  main.rs  models.rs  patterns.rs  patterns_optimized.rs  scanner.rs  scanner_enhanced.rs  scanner_optimized.rs  tests.rs  whitelist_manager.rs
src/components/: VirtualScroll.vue
src/pages/: HistoryPage.vue  ResultsPage.vue  ResultsPageEnhanced.vue  ScanPage.vue  WhitelistPage.vue  WhitelistPageEnhanced.vue
src/services/: api.ts
src/stores/: enhancedScanStore.ts  scanStore.ts
src/tests/: components.spec.ts
