[package]
name = "sensitive-scanner"
version = "0.1.0"
description = "A lightweight cross-platform sensitive data scanner"
authors = ["Sensitive Scanner Team"]
edition = "2021"

[lib]
name = "sensitive_scanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system and async operations
tokio = { version = "1", features = ["full"] }
async-walkdir = "2"
walkdir = "2"
num_cpus = "1"

# Excel parsing
calamine = { version = "0.24", features = ["dates"] }

# Regular expressions
regex = "1"

# Parallel processing
rayon = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = "0.4"

# Encoding detection
chardet = "0.2"
encoding_rs = "0.8"

# Lazy initialization
lazy_static = "1.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "1"

# System paths
dirs = "5"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }
